# pNFT-Mortgage

./: .gitignore  Anchor.toml  DAY1_PROGRESS.json  README.md  clear-protocol-account.js  debug-protocol-accounts.js  package-lock.json  test-create-loan-deployed.js  test-create-loan-terminal.js  test-loan-creation-fixed.js  test-minimal-loan.js  test-program-connection.js  test-simple-loan.js  test-working-loan.js
frontend/: next.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auctions/: page.tsx
frontend/src/app/create-loan/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: DirectWalletConnect.tsx  NetworkWarning.tsx  ProgramDebugger.tsx  ProperWalletConnect.tsx  WalletContextDebugger.tsx  WalletDebugger.tsx
frontend/src/contexts/: WalletProvider.tsx
frontend/src/hooks/: useLoans.ts  usePNFT.ts  useProgram.ts  useUnifiedWallet.ts  useWalletBalance.ts
frontend/src/lib/: anchor.ts  config.ts  idl.json  idl.json.backup  pnft-manager.ts  program.ts  solana.ts
frontend/src/types/: auction.ts  loan.ts  pnft.ts  wallet.d.ts
programs/pnft_mortgage_market/: Cargo.toml
programs/pnft_mortgage_market/src/: errors.rs  events.rs  lib.rs  lib_complex.rs  utils.rs
programs/pnft_mortgage_market/src/contexts/: auction.rs  create_loan.rs  create_vault.rs  deposit_collateral.rs  initialize.rs  liquidate.rs  mod.rs  repay_loan.rs
programs/pnft_mortgage_market/src/states/: auction.rs  loan.rs  mod.rs  protocol.rs  vault.rs
tests/: pnft_mortgage_market.ts
(+2 files in other folders)
