[package]
name = "pnft_mortgage_market"
version = "0.1.0"
description = "pNFT Mortgage Market - Programmable NFT Lending Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pnft_mortgage_market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
mpl-token-metadata = "4.1.2"
solana-program = "1.18.26"
